--- a/template/themes/default/welcome.html
+++ b/template/themes/default/welcome.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="{{url_for('static', filename='favicon.ico')}}">
 
         <title>Flask</title>
 
@@ -92,19 +93,4 @@
             </div>
         </div>
     </body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io();
-    socket.on('connect', function() {
-        console.log(" connected ");
-    });
-    socket.on('check', function(message) {
-      console.log(message);
-    });
-    socket.on('json', function(message) {
-      console.log(message);
-    });
-</script>
-
 </html>
