updating multilogin for the new version of flask-framework-mvc

--- a/template/40x.html
+++ b/template/40x.html
@@ -1,10 +1,5 @@
-{% extends "themes/default/index.html" %}
-
-{% block content %}
-    <h3>
-        {{ title }}
-    </h3>
-    <p>
-        {{ cause }}
-    </p>
-{% endblock %}
+{% if theme is defined %}
+    {% extends "themes/%s/40x.html" % theme %}
+{% else %}
+    {% extends "themes/%s/40x.html" % 'default' %}
+{% endif %}
