--- a/template/admin/rediscli/console.html
+++ b/template/admin/rediscli/console.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <div class="console">
-  <div class="console-container">
+  <div class="console-container text-info">
   </div>
   <div class="console-line">
     <form action="#">
