--- a/template/themes/default/50x.html
+++ b/template/themes/default/50x.html
@@ -2,12 +2,14 @@
 
 {% block title %}
     <h3>
-        {{ title }}
+        {{ request.url }}
     </h3>
 {% endblock %}
 
 {% block content %}
-    <p class="alert alert-danger">
-        {{ cause }}
-    </p>
+    <div class="panel-body alert-danger">
+        <strong class="alert">
+            {{ title }}
+        </strong>
+    </div>
 {% endblock %}
