--- a/template/admin/settings/general.html
+++ b/template/admin/settings/general.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <br/>
-    <div class="container col-md-12 panel panel-default">
+    <div class="col-md-12 panel panel-default">
 
     <div class="col-md-12">
         <div class="row">
@@ -57,7 +57,7 @@
     </div>
     </div>
     {% for setting in settings %}
-    <div class="container col-md-12 panel panel-default">
+    <div class="col-md-12 panel panel-default">
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
