--- a/template/admin/users/index.html
+++ b/template/admin/users/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container col-md-12 panel">
+    <div class="col-md-12 panel">
         <div class="card">
             <div class="card-header">
                 <div class="row">
@@ -23,7 +23,7 @@
         </div>
     </div>
     {% for user in users %}
-    <div class="container col-md-12 panel panel-default">
+    <div class="col-md-12 panel panel-default">
         <div class="card">
             <div class="card-body">
                 <div class="row">
