--- a/flask_cms/static/admin/css/nav.css
+++ b/flask_cms/static/admin/css/nav.css
@@ -40,3 +40,36 @@
 .media a:after + .admin-medias-nav {
     visibility: visible;
 }
+
+.admin-pages-nav {
+    position: relative;
+}
+
+.admin-pages-nav .pages-nav {
+    text-align: right;
+    padding: 6.5px;
+}
+
+.admin-pages-nav .pages-nav input {
+}
+
+.admin-pages-nav .pages-nav .actions {
+    width: 2rem;
+    height: 2rem;
+    background-size: auto 100%;
+    background-position: center;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.form-control, input, textarea, select {
+    width: 100%;
+}
+
+.form-control, #submit {
+    width: auto;
+}
+.text-default {
+    color: #464545;
+}
