--- a/flask_cms/template/admin/upload/index.html
+++ b/flask_cms/template/admin/upload/index.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <form action="{{ url_for('admin:{}.add'.format(module)) }}" enctype="multipart/form-data" method="post">
+    <form action="{{ url_for('admin:{}.add'.format(module)) }}" class="col-md-12" enctype="multipart/form-data" method="post">
         {{ form.hidden_tag() }}
         <input type="text" name="csrf_session_token", id="csrf_session_token", value="{{ session.get('csrf_token') }}" hidden="hidden">
         <div class="card">
