updating example for site application to be activated with the cms

--- a/template/themes/default/app.html
+++ b/template/themes/default/app.html
@@ -61,7 +61,7 @@
                     </button>
 
                     <!-- Branding Image -->
-                    <a class="custom_white_text navbar-brand" href="{{ url_for("home") }}">
+                    <a class="custom_white_text navbar-brand" href="/">
                         home
                     </a>
                 </div>
